# kLogs

./: README.md  klogs.py  pyproject.toml
klogs/: kLogger.py  test.py
scripts/: update.sh
src/: kFormatter.py  kLogger.py  klogs.py
