[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "kLogs"
version = "0.1.0"
authors = [
    {name = "Kevin J. Mahon", email = "k.mahon.dev@gmail.com"}
]
description = "Lightweight logging utility for python, no external libs"

